# MIFOOD

./: .env.example  .gitignore  README.md  app.py  extensions.py  pyproject.toml  requirements.txt  seed.py  МИФУД_UserStories.md  МИФУД_требования1.docx
app/: __init__.py  config.py  extensions.py  seed.py
app/blueprints/auth/: __init__.py  routes.py
app/blueprints/menu/: __init__.py  routes.py
app/blueprints/orders/: __init__.py
app/blueprints/reservations/: __init__.py
app/models/: __init__.py  menu.py  order.py  reservation.py  user.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/: base.html  home.html
app/templates/auth/: login.html
app/templates/orders/: status.html
docs/: МИФУД_UseCases.md
instance/: canteen.db
models/: menu.py  order.py  reservation.py  user.py
templates/: base.html
tests/: test_basic.py
